# linkedin-candidate-finder

./: .gitignore  pyproject.toml
src/: main.py
src/llm/: analyzer.py
src/scrapers/: experience_extractor.py  linkedin_scraper.py
