[project]
name = "recruiter-be"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright (>=1.52.0,<2.0.0)",
    "litellm (>=1.71.1,<2.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "boto3 (>=1.38.23,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
